--- a/app/src/main/res/layout/activity_general_citizen.xml
+++ b/app/src/main/res/layout/activity_general_citizen.xml
@@ -30,6 +30,7 @@
         android:layout_marginBottom="486dp"
         android:background="@drawable/button2"
         android:text="@string/bleeding"
+        android:onClick="bled"
         android:textAllCaps="true"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
